fixed bug align rule on index page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -215,6 +215,11 @@ img {
     height: 120px;
 }
 
+.index-statements {
+    margin-bottom: 15px;
+    
+}
+
 /* ----- Footer ----- */
 
 footer {
